# Implementation/external-services/controllers/Pharmacy.js
@@ -3,20 +3,25 @@
 var utils = require('../utils/writer.js');
 var pharmacy = require('../services/PharmacyService');
 
-module.exports.getAvailability = function getAvailability (req, res) {
-    if(req.body && req.body.pharmacyId >= 0 && req.body.drugId >= 0 && req.body.quantity >= 0)
-        pharmacy.getAvailability(req.body.pharmacyId, req.body.drugId, req.body.quantity)
+module.exports.getAvailability = function getAvailability(req, res) {
+    // console.log("req.body: " + JSON.stringify(req.body));
+    if (req.body && req.body.pharmacyId >= 0 && req.body.drugCode !== null && req.body.quantity >= 0) {
+        console.log("-> req.body: " + JSON.stringify(req.body))
+        pharmacy.getAvailability(req.body.pharmacyId, req.body.drugCode, req.body.quantity)
             .then(function (response) {
                 utils.writeJson(res, response);
             })
             .catch(function (response) {
                 utils.writeJson(res, response);
             });
-    else
+    }
+    else {
         utils.writeJson(res, 'Invalid request');
+    }
+
 };
 
-module.exports.getListOfPharmacies = function getListOfPharmacies (req, res) {
+module.exports.getListOfPharmacies = function getListOfPharmacies(req, res) {
     pharmacy.getListOfPharmacies()
         .then(function (response) {
             utils.writeJson(res, response);
@@ -26,9 +31,9 @@ module.exports.getListOfPharmacies = function getListOfPharmacies (req, res) {
         });
 }
 
-module.exports.reserveDrugs = function reserveDrugs (req, res) {
-    if(req.body && req.body.pharmacyId >= 0 && req.body.drugId >= 0 && req.body.quantity >= 0)
-        pharmacy.reserveDrugs(req.body.pharmacyId, req.body.drugId, req.body.quantity)
+module.exports.reserveDrugs = function reserveDrugs(req, res) {
+    if (req.body && req.body.pharmacyId >= 0 && req.body.drugCode !== null && req.body.quantity >= 0)
+        pharmacy.reserveDrugs(req.body.pharmacyId, req.body.drugCode, req.body.quantity)
             .then(function (response) {
                 utils.writeJson(res, response);
             })
@@ -39,9 +44,9 @@ module.exports.reserveDrugs = function reserveDrugs (req, res) {
         utils.writeJson(res, 'Invalid request');
 };
 
-module.exports.orderDrugs = function orderDrugs (req, res) {
-    if(req.body && req.body.pharmacyId >= 0 && req.body.drugId >= 0 && req.body.quantity >= 0)
-        pharmacy.orderDrugs(req.body.pharmacyId, req.body.drugId, req.body.quantity)
+module.exports.orderDrugs = function orderDrugs(req, res) {
+    if (req.body && req.body.pharmacyId >= 0 && req.body.drugCode !== null && req.body.quantity >= 0)
+        pharmacy.orderDrugs(req.body.pharmacyId, req.body.drugCode, req.body.quantity)
             .then(function (response) {
                 utils.writeJson(res, response);
             })
@@ -52,9 +57,9 @@ module.exports.orderDrugs = function orderDrugs (req, res) {
         utils.writeJson(res, 'Invalid request');
 };
 
-module.exports.getTimeAvailability = function getTimeAvailability (req, res) {
-    if(req.body && req.body.pharmacyId >= 0 && req.body.drugId >= 0 )
-        pharmacy.getTimeAvailability(req.body.pharmacyId, req.body.drugId, req.body.available)
+module.exports.getTimeAvailability = function getTimeAvailability(req, res) {
+    if (req.body && req.body.pharmacyId >= 0 && req.body.drugCode !== null)
+        pharmacy.getTimeAvailability(req.body.pharmacyId, req.body.drugCode, req.body.availability)
             .then(function (response) {
                 utils.writeJson(res, response);
             })
